# socfpga_modules

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  bootstrap.sh  config.sh  toolchain-arm-linux-gnueabihf.cmake
boot/: .gitignore  Makefile  boot.cmd
dts/: Makefile  README.md  soc_system.dtb  soc_system.dts
dtsi/: .gitignore  Makefile  soc_system.dts  soc_system.dtsi  soc_system_embedded.dtsi  soc_system_overlay.dts  u-boot.dts
hdl/cdc/: async_edge_cross_domain.sv  edge_cross_domain.sv
hdl/clocks/: clock_counter.sv  clock_divider.sv
hdl/delay_pulse/: delay_pulse.sv  delay_pulse_generator.sv  delay_width.vh
hdl/dma/: msgdma_commit.sv  msgdma_fetch.sv
hdl/evbox/: evbox_in.sv  evbox_out.sv
hdl/misc/: adc_adder.sv  adc_fifo.sv  adc_ltc2308.sv
hdl/spi/: spi_master.sv  spi_ro_slave.sv  spi_slave.sv
qpf/: .gitignore  Makefile  ghrd.v  revision.tcl  soc_system.qsf  soc_system.qsys  soc_system.sopcinfo  stp2.stp  system_top.sv
qpf/dts/: board_info.xml  boot.cmd  option_file.resp  soc_system.dts
qpf/ip/slave_io/: slave_io.v  slave_io_hw.tcl
qpf/soc_system/: soc_system.xml  soc_system_bb.v  soc_system_inst.v
src/: CMakeLists.txt
src/drivers/: .gitignore  CMakeLists.txt
src/drivers/adc-fifo/: CMakeLists.txt  adc-fifo.c  adc-fifo.h
src/drivers/dgmod/: CMakeLists.txt  dgmod.c  dgmod.h  dgmod.mod
src/drivers/dgmod/.tmp_versions/: dgmod.mod
src/drivers/dkms/: dkms.cmake
src/drivers/dtbocfg/: CMakeLists.txt
src/drivers/pio/: CMakeLists.txt  pio.c  pio.h
src/drivers/tsensor/: CMakeLists.txt  tsensor.c  tsensor.h
src/dtsi/: Makefile  soc_system.dtsi
src/httpd/: .gitignore  CMakeLists.txt  yarn.sh
src/httpd/html/: chat.html  chat.js  index.html  loadbanner.js  websock.js  websock_tsensor.js
src/httpd/html/dgmod/: commitdata.js  ctor.js  events.js  fetchstatus.js  index.html  protocol.html  websock.js
src/httpd/httpd/: CMakeLists.txt  advanced_server.cpp  advanced_server_flex.cpp  bmp280.cpp  bmp280.hpp  dgmod.cpp  dgmod.hpp  facade.cpp  facade.hpp  http_session.cpp  httpd.sh.in  json_extract.hpp  json_helper.cpp  json_helper.hpp  jsonhelper.hpp  listener.cpp  listener.hpp  log.cpp  log.hpp  main.cpp  postinst.in  shared_state.cpp  shared_state.hpp  slave_io.cpp  slave_io.hpp  tsensor.cpp  tsensor.hpp  version.h.in  websocket_session.cpp  websocket_session.hpp
src/libs/: CMakeLists.txt
src/libs/i2c/: CMakeLists.txt  ad5593.cpp  ad5593.hpp  bmp280.cpp  bmp280.hpp  i2c.cpp  i2c.hpp
src/tools/: CMakeLists.txt
src/tools/adc/: CMakeLists.txt  main.cpp
src/tools/bmp280/: CMakeLists.txt  main.cpp
src/tools/dgctl/: CMakeLists.txt  main.cpp
src/tools/injctl/: CMakeLists.txt  date_time.hpp  main.cpp
src/tools/tsensor/: CMakeLists.txt  main.cpp
tests/: Makefile  spi_tb.sv
